# LoggingApp

./: CMakeLists.txt  README.md  logging.cpp  logging.h  main.cpp
